name:                lyah
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/anshumanf/learn-you-a-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Anshuman Fotedar
maintainer:          me.aragorn@gmail.com
copyright:           2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Geometry.Cube
                     , Geometry.Cuboid
                     , Geometry.Sphere
                     , Lockers
                     , MyList
                     , Shapes
                     , Vector
  build-depends:       base >= 4.7 && < 5
                    , containers
  default-language:    Haskell2010

executable lyah-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lyah
                     , containers
  default-language:    Haskell2010

test-suite lyah-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lyah
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/anshumanf/learn-you-a-haskell
